Finished Clustering and evaluation for clustering

--- a/Data_Cleaning_and_Feature_Extraction.ipynb
+++ b/Data_Cleaning_and_Feature_Extraction.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b4e9b88e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7d96f7ef",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0ac22e14",
    "metadata": {},
    "outputs": [
@@ -129,15 +129,15 @@
      "data": {
       "text/plain": [
        "(                                                path language  gender\n",
-       " 0  dataset/Korean/Female/810101394_female_korean_...   Korean  Female\n",
-       " 1  dataset/Korean/Male/220701055_male_Korean_voic...   Korean    Male\n",
-       " 2  dataset/Italian/Male/810101434_male_italian_vo...  Italian    Male\n",
-       " 3  dataset/Italian/Male/810102443_male_italian_vo...  Italian    Male\n",
-       " 4  dataset/Korean/Male/810104067_male_korean_voic...   Korean    Male,\n",
-       " (712, 3))"
+       " 0  dataset\\Italian\\Female\\810104250_female_italia...  Italian  Female\n",
+       " 1  dataset\\Italian\\Female\\810101502_female_italia...  Italian  Female\n",
+       " 2  dataset\\German\\Male\\810103040_male_german_voic...   German    Male\n",
+       " 3  dataset\\Italian\\Male\\810101441_male_italian_vo...  Italian    Male\n",
+       " 4  dataset\\Korean\\Female\\810100094_female_korean_...   Korean  Female,\n",
+       " (720, 3))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e11db5bc",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6b29f56d",
    "metadata": {},
    "outputs": [
@@ -264,31 +264,31 @@
      "data": {
       "text/plain": [
        "(                                                path  \\\n",
-       " 0  dataset/Korean/Female/810101394_female_korean_...   \n",
-       " 1  dataset/Korean/Male/220701055_male_Korean_voic...   \n",
-       " 2  dataset/Italian/Male/810101434_male_italian_vo...   \n",
-       " 3  dataset/Italian/Male/810102443_male_italian_vo...   \n",
-       " 4  dataset/Korean/Male/810104067_male_korean_voic...   \n",
+       " 0  dataset\\Italian\\Female\\810104250_female_italia...   \n",
+       " 1  dataset\\Italian\\Female\\810101502_female_italia...   \n",
+       " 2  dataset\\German\\Male\\810103040_male_german_voic...   \n",
+       " 3  dataset\\Italian\\Male\\810101441_male_italian_vo...   \n",
+       " 4  dataset\\Korean\\Female\\810100094_female_korean_...   \n",
        " \n",
        "                                           clean_path language  gender status  \\\n",
-       " 0  processed_audio/Korean/Female/810101394_female...   Korean  Female     ok   \n",
-       " 1  processed_audio/Korean/Male/220701055_male_Kor...   Korean    Male     ok   \n",
-       " 2  processed_audio/Italian/Male/810101434_male_it...  Italian    Male     ok   \n",
-       " 3  processed_audio/Italian/Male/810102443_male_it...  Italian    Male     ok   \n",
-       " 4  processed_audio/Korean/Male/810104067_male_kor...   Korean    Male     ok   \n",
+       " 0  processed_audio\\Italian\\Female\\810104250_femal...  Italian  Female     ok   \n",
+       " 1  processed_audio\\Italian\\Female\\810101502_femal...  Italian  Female     ok   \n",
+       " 2  processed_audio\\German\\Male\\810103040_male_ger...   German    Male     ok   \n",
+       " 3  processed_audio\\Italian\\Male\\810101441_male_it...  Italian    Male     ok   \n",
+       " 4  processed_audio\\Korean\\Female\\810100094_female...   Korean  Female     ok   \n",
        " \n",
        "   error  samples  seconds  clipping_ratio  language_id  gender_id  \n",
-       " 0         960000     60.0        0.000000            2          0  \n",
-       " 1         960000     60.0        0.000001            2          1  \n",
-       " 2         960000     60.0        0.000000            1          1  \n",
-       " 3         960000     60.0        0.000000            1          1  \n",
-       " 4         960000     60.0        0.000001            2          1  ,\n",
+       " 0         960000     60.0        0.000000            1          0  \n",
+       " 1         960000     60.0        0.000000            1          0  \n",
+       " 2         960000     60.0        0.000001            0          1  \n",
+       " 3         960000     60.0        0.000001            1          1  \n",
+       " 4         960000     60.0        0.000000            2          0  ,\n",
        " status\n",
-       " ok    712\n",
+       " ok    720\n",
        " Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,21 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bddff8cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({'total_files_indexed': 712,\n",
-       "  'ok_files': 712,\n",
+       "({'total_files_indexed': 720,\n",
+       "  'ok_files': 720,\n",
        "  'bad_files': 0,\n",
-       "  'mean_clipping_ratio_ok': 1.8580290262172287e-07},\n",
+       "  'mean_clipping_ratio_ok': 1.9675925925925927e-07},\n",
        " Series([], Name: count, dtype: int64))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c4424eb8",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7764bac6",
    "metadata": {},
    "outputs": [],
@@ -526,36 +526,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fd75d6d6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(                                           orig_path  \\\n",
-       " 0  dataset/Korean/Female/810101394_female_korean_...   \n",
-       " 1  dataset/Korean/Male/220701055_male_Korean_voic...   \n",
-       " 2  dataset/Italian/Male/810101434_male_italian_vo...   \n",
-       " 3  dataset/Italian/Male/810102443_male_italian_vo...   \n",
-       " 4  dataset/Korean/Male/810104067_male_korean_voic...   \n",
-       " \n",
-       "                                             aug_path language  gender  \n",
-       " 0  processed_audio_aug/Korean/Female/810101394_fe...   Korean  Female  \n",
-       " 1  processed_audio_aug/Korean/Male/220701055_male...   Korean    Male  \n",
-       " 2  processed_audio_aug/Italian/Male/810101434_mal...  Italian    Male  \n",
-       " 3  processed_audio_aug/Italian/Male/810102443_mal...  Italian    Male  \n",
-       " 4  processed_audio_aug/Korean/Male/810104067_male...   Korean    Male  ,\n",
-       " (712, 4))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'AUG_DIR' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m USE_AUGMENTATION = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m      2\u001b[39m AUG_COPIES_PER_FILE = \u001b[32m1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mAUG_DIR\u001b[49m.mkdir(parents=\u001b[38;5;28;01mTrue\u001b[39;00m, exist_ok=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      6\u001b[39m aug_rows = []\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m USE_AUGMENTATION:\n",
+      "\u001b[31mNameError\u001b[39m: name 'AUG_DIR' is not defined"
+     ]
     }
    ],
    "source": [
-    "USE_AUGMENTATION = True\n",
+    "USE_AUGMENTATION = False\n",
     "AUG_COPIES_PER_FILE = 1\n",
     "\n",
     "AUG_DIR.mkdir(parents=True, exist_ok=True)\n",
@@ -592,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2c9660eb",
    "metadata": {},
    "outputs": [
@@ -601,14 +589,14 @@
      "output_type": "stream",
      "text": [
       "Unique augmented languages: language\n",
-      "Korean     180\n",
       "Italian    180\n",
+      "German     180\n",
+      "Korean     180\n",
       "Spanish    180\n",
-      "German     172\n",
       "Name: count, dtype: int64\n",
       "Unique augmented genders: gender\n",
       "Female    360\n",
-      "Male      352\n",
+      "Male      360\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -638,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3a9aa668",
    "metadata": {},
    "outputs": [],
@@ -702,30 +690,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a98fc670",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1424, 952),\n",
+       "((1440, 952),\n",
        "                                                 path variant language  gender  \\\n",
-       " 0  dataset/Korean/Female/810101394_female_korean_...   clean   Korean  Female   \n",
-       " 1  dataset/Korean/Male/220701055_male_Korean_voic...   clean   Korean    Male   \n",
-       " 2  dataset/Italian/Male/810101434_male_italian_vo...   clean  Italian    Male   \n",
-       " 3  dataset/Italian/Male/810102443_male_italian_vo...   clean  Italian    Male   \n",
-       " 4  dataset/Korean/Male/810104067_male_korean_voic...   clean   Korean    Male   \n",
+       " 0  dataset\\Italian\\Female\\810104250_female_italia...   clean  Italian  Female   \n",
+       " 1  dataset\\Italian\\Female\\810101502_female_italia...   clean  Italian  Female   \n",
+       " 2  dataset\\German\\Male\\810103040_male_german_voic...   clean   German    Male   \n",
+       " 3  dataset\\Italian\\Male\\810101441_male_italian_vo...   clean  Italian    Male   \n",
+       " 4  dataset\\Korean\\Female\\810100094_female_korean_...   clean   Korean  Female   \n",
        " \n",
        "          y  \n",
-       " 0   Korean  \n",
-       " 1   Korean  \n",
-       " 2  Italian  \n",
+       " 0  Italian  \n",
+       " 1  Italian  \n",
+       " 2   German  \n",
        " 3  Italian  \n",
        " 4   Korean  )"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,22 +793,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "af5707fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'X_shape': (1424, 952),\n",
-       " 'num_samples': 1424,\n",
-       " 'languages': {'Korean': np.int64(360),\n",
-       "  'Italian': np.int64(360),\n",
-       "  'Spanish': np.int64(360),\n",
-       "  'German': np.int64(344)}}"
+       "{'X_shape': (1440, 952),\n",
+       " 'num_samples': 1440,\n",
+       " 'languages': {'Italian': np.int64(360),\n",
+       "  'German': np.int64(360),\n",
+       "  'Korean': np.int64(360),\n",
+       "  'Spanish': np.int64(360)}}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d3e28f82",
    "metadata": {},
    "outputs": [
@@ -862,12 +850,12 @@
       "text/plain": [
        "(language  German  Italian  Korean  Spanish\n",
        " variant                                   \n",
-       " aug          172      180     180      180\n",
-       " clean        172      180     180      180,\n",
+       " aug          180      180     180      180\n",
+       " clean        180      180     180      180,\n",
        " {'nan_count': 0, 'inf_count': 0})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
